# pridec_gee

./: .coverage  .gitignore  README.md  fetch_all_climate_pridec.py  labNotebook-pridec-gee.md  pyproject.toml  requirements.txt
.github/actions/: publish.yml
.github/workflows/: publish.yml  tests.yml
docs/: example.py  pridec-climate-metadata.json
scratch/: climate_docker_service.py  climate_scratch.py  csb_orgUnit_dhis.geojson  delete_example.py  fkt_orgUnit_dhis.geojson  ifd_fokontany2.geojson  sen1-testing-text.py  sen2data.json  simple-test.py  test_package.py  testing-utils.py  utils.py
src/pridec_gee/: __init__.py  fetch_climate_gee.py  import_pridec_climate.py
src/pridec_gee.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pridec_gee/data/: pivot_major_rice.geojson
src/pridec_gee/dhis2/: delete_dataValues.py  delete_historic_climate.py  get_dhis_geojson.py  get_pridec_elements.py  post_climate.py
src/pridec_gee/gee/: calc_date_range.py  fetch_era5_climate.py  fetch_fewsnet_windspeed.py  fetch_modis_aod.py  fetch_modis_fire.py  fetch_sen1_flood.py  fetch_sen2_indicators.py  utils.py  variables.py
src/pridec_gee/gee/s1_ard/: README.md  __init__.py  border_noise_correction.py  speckle_filter.py  wrapper.py
test/: conftest.py
test/data/: rice_subset.geojson
test/dhis2/: test_delete_historic_climate.py  test_get_pridec_elements.py
test/gee/: test_era5_climate.py  test_fetch_climate_gee.py  test_fewsnet.py  test_import_climate.py  test_modis_aod.py  test_modis_fire.py  test_sen1_flood.py  test_sen2_indicators.py
tests/: conftest.py
tests/data/: test_polygons.geojson
tests/dhis2/: test_delete_historic_climate.py  test_get_dhis_geojson.py  test_get_pridec_elements.py
tests/gee/: test_calc_date_range.py  test_era5_climate.py  test_fewsnet.py  test_import_climate.py  test_modis_aod.py  test_modis_fire.py  test_sen1_flood.py  test_sen2_indicators.py
utils/: __init__.py  delete_dataValues.py  delete_historic_climate.py  fetch_era5_climate.py  fetch_fewsnet_windSpeed.py  fetch_modis_aod.py  fetch_modis_fire.py  fetch_sen1_flood.py  fetch_sen2_climate.py  gee_utils.py  get_date_range.py  get_dhis_geojson.py  launch_analytics.py  post_dataValues.py
utils/gee_s1_ard/: __init__.py  s1_ard.py  wrapper.py
