[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.10.7,<0.11.0"]

[project]
name = 'pridec_gee'
version = '0.1.0'
requires-python = ">=3.12"
description = "Import environmental data from Google Earth Engine into DHIS2 instances"
readme = "README.md"
authors = [
    {email = "pridec@pivotworks.org"},
    {name = "PRIDE-C Project"}
]
dependencies = [
    "dotenv>=0.9.9",
    "earthengine-api>=1.7.15",
    "ee>=0.2",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "python-dateutil>=2.9.0.post0",
    "requests>=2.32.5",
    "setuptools>=82.0.0",
]
